HANLinkedList update en getFirst/getLast gefixt Kennelijk had ik getFirst en getLast voor een ArrayList, wat niet kon, weet niet hoe dit vroeger wel werkte maar doe het nu gewoon met een ArrayList get(). Verder heb ik de insert for() edge cases gefixt met een lijst aan tests om zeker te zijn dat ze het doen naar verwachting.